syntax = "proto3";

package ligato.vpp_agent.linux;

option go_package = "go.ligato.io/vpp-agent/v2/proto/ligato/vpp-agent/linux;linux";

import "ligato/vpp-agent/linux/interfaces/interface.proto";
import "ligato/vpp-agent/linux/l3/arp.proto";
import "ligato/vpp-agent/linux/l3/route.proto";

message ConfigData {
    repeated linux.interfaces.Interface interfaces = 10;

    repeated linux.l3.ARPEntry arp_entries = 20;
    repeated linux.l3.Route routes = 21;
}

message Notification {}
